# symbiot

./: .pre-commit-config.yaml  README.md  bridge.toml.dist  pyproject.toml
symbiot/: __init__.py  __main__.py  bridge.py  receiver.py
